# Cuki-IR-generator-Python

./: .gitignore  Cuki_IR_light.ipynb  README.md  cuki_ir_cli.py  cuki_ir_gui.py  cuki_ir_light3.py  pyproject.toml
